[package]
name = "server"
version = "0.1.0"
edition = "2021"
author = "Paxton Smith"
# https://www.linkedin.com/in/paxton21/
# https://github.com/Paxton21/

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
serde = { version = "1.0.199", features = ["derive"]}
hex = "0.4.3"
chacha20poly1305 = "0.10.1"